[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb0-mcp"
version = "0.2.0"
description = "Python client for kb0 — the knowledge base layer for AI agents (MCP, markdown, git)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Vitor Christoval" }]
keywords = ["mcp", "ai-agents", "knowledge-base", "rag", "markdown", "vault"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://kb0.dev"
Repository = "https://github.com/vitorchristoval/kb0"
Documentation = "https://github.com/vitorchristoval/kb0/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/kb0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
